--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "vitest",
+    "test:ci": "vitest run"
   },
   "dependencies": {
     "formik": "^2.4.9",
@@ -23,6 +25,9 @@
     "@storybook/addon-docs": "^10.2.3",
     "@storybook/addon-vitest": "^10.2.3",
     "@storybook/react-vite": "^10.2.3",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
@@ -34,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "eslint-plugin-storybook": "^10.2.3",
     "globals": "^16.5.0",
+    "jsdom": "^28.1.0",
     "playwright": "^1.58.1",
     "storybook": "^10.2.3",
     "typescript": "~5.9.3",
